<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.Sign_in">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="19.7dp"
            android:src="@drawable/ic_daftar"
            android:contentDescription="@string/img_logo" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_fb"
            android:layout_below="@+id/logo"
            android:text="@string/connect_facebook"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/or"
            android:text="@string/or"
            android:textSize="12sp"
            android:layout_below="@id/login_fb"
            android:layout_centerInParent="true"
            android:padding="8dp"/>

        <LinearLayout
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/or">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#a9aaac"
                android:textColor="#100b20">

                <EditText
                    android:id="@+id/username"
                    android:textSize="15sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:autofillHints="@string/username"
                    android:layout_marginLeft="46dp"
                    android:layout_marginRight="46dp"
                    android:textColorHint="#76818a"
                    android:textColor="#404547"
                    android:background="#0000"
                    android:padding="14dp"
                    android:inputType="textPersonName"
                    android:drawableStart="@drawable/ic_username"
                    android:drawablePadding="16dp"
                    android:drawableLeft="@drawable/ic_username" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#a9aaac"
                android:textColor="#100b20">

                <EditText
                    android:id="@+id/password"
                    android:textSize="15sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:autofillHints="@string/password"
                    android:layout_marginLeft="46dp"
                    android:layout_marginRight="46dp"
                    android:textColorHint="#76818a"
                    android:textColor="#404547"
                    android:background="#0000"
                    android:padding="14dp"
                    android:inputType="textPassword"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="16dp"
                    android:drawableLeft="@drawable/ic_password" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:gravity="end"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="56dp"
                android:layout_marginRight="56dp" />

        </LinearLayout>

        <Button
            android:layout_marginTop="16dp"
            android:layout_marginStart="45dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/btnLogin"
            android:layout_below="@id/line"
            android:text="@string/sign_in"
            android:layout_centerInParent="true"
            android:layout_marginLeft="45dp" />

        <RelativeLayout
            android:layout_centerInParent="true"
            android:layout_marginTop="16dp"
            android:layout_below="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account"/>

            <TextView
                android:id="@+id/tvregister"
                android:layout_toEndOf="@+id/tv_create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="#EA495F"
                android:layout_toRightOf="@+id/tv_create_account" />

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>